--- a/style.css
+++ b/style.css
@@ -1,7 +1,23 @@
+body{
+    display: flex;
+
+}
+.result{
+    width: 50%;
+    margin: 10px 10px;
+    margin-left: 0px;
+    margin-bottom: 100px;
+    border: 1px solid black;
+    border-left: none;
+    background-color: lightgray;
+    padding: 10px;
+    background-color: #dbd56e;
+}
 .container{
-    max-width: 80%;
+    width: 200%;
     border: 1px solid black; 
-    margin: 30px auto;
+    margin: 10px 10px;
+    margin-right: 0px;
     background-image: url("Voting\ Election\ Day\ GIF\ by\ Lo\ Harris.gif");
     background-size: cover;
 }
@@ -22,23 +38,46 @@ td, th{
     margin: auto;
 
 }
-h1, h2{
-    display:flex;
-    justify-content: center;
+.heading{
+    display:block;
+    margin: 10px auto;
+    border: none;
+    text-align: center;
     width: 100%;
     font-family: "Acme", sans-serif;
-    font-weight: 400;
+    font-weight: 200;
     font-style: normal;
-    font-size: xx-large;
+    font-size: normal;
+}
+#res-heading{
+    display:block;
+    margin: 10px auto;
+    border: none;
+    text-align: center;
+    width: 100%;
+    font-family: "Acme", sans-serif;
+    font-weight: 200;
+    font-style: italic;
+    font-size: normal;
+    color: #c1121f;
 }
 #savebtn{
     width: 100px;
     margin: 20px auto;
     display: block;
     background-color: rgba(255, 255, 0, 0.897);
+    border-radius: 10px;
 }
 button{
     background-color: rgba(0, 128, 0, 0.176);
     border:1px solid black;
     padding: 8px;
+}
+#winner{
+    color: rgba(0, 128, 0, 0.797);
+    font-weight: bold;
+    font-family: "Acme", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: larger;
 }
